--- a/resume.html
+++ b/resume.html
@@ -19,7 +19,7 @@
 <body class="page-resume">
   <!-- Navbar -->
   <nav class="navbar navbar-expand-xl navbar-dark sticky-top">
-    <div class="container">
+    <div class="container-xl">
       <a class="navbar-brand fw-semibold" href="index.html">Zafaryab Haider</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -38,7 +38,7 @@
   <main>
     <!-- Hero -->
     <section class="page-hero">
-      <div class="container">
+      <div class="container-xl">
         <div class="hero-card">
           <div class="hero-inner">
             <div class="d-flex flex-column flex-md-row align-items-start align-items-md-center justify-content-between gap-3">
@@ -69,7 +69,7 @@
 
     <!-- Body (UNCHANGED from your version) -->
     <section class="section">
-      <div class="container">
+      <div class="container-xl">
         <div class="row g-4 align-items-start">
           <div class="col-12 col-lg-4">
             <aside class="profile-card">
