--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
               <img src="images/profile.jpg" alt="Portrait of Zafaryab Haider" class="about-photo mb-3" />
               <div class="kicker mb-3 justify-content-center justify-content-lg-start">
                 <i class="fa-solid fa-shield-halved"></i>
-                <span>AI • Security • Embedded Systems</span>
+                <span>AI • Security • Trustworthy and Safe AI</span>
               </div>
 
               <h1 class="h3 mb-1 fw-bold">Zafaryab Haider</h1>
