--- a/resume.html
+++ b/resume.html
@@ -165,6 +165,29 @@
                   </ul>
                 </div>
               </section>
+              
+              <!-- Awards / Funding -->
+              <section class="content-card" id="awards">
+                <div class="card-head">
+                  <div class="icon"><i class="fa-solid fa-award"></i></div>
+                  <h3>Awards &amp; Funding</h3>
+                </div>
+
+                <div class="card-body tight">
+                  <ul class="mb-0">
+                    <li>
+                      <strong>SentriAlign: Training-Signal Integrity for LLMs</strong>
+                      — <span class="muted">Co-PI</span><br />
+                      <span class="muted">
+                        Funding Agency: MIRTA 8.0 Commercialization Accelerator ·
+                        Duration: Jan 14, 2026 – May 11, 2026 ·
+                        Amount: $25,000
+                      </span>
+                    </li>
+                  </ul>
+                </div>
+              </section>
+
 
               <!-- Patents -->
               <section class="content-card" id="patents">
