--- a/resume.html
+++ b/resume.html
@@ -177,10 +177,10 @@
                   <ul class="mb-0">
                     <li>
                       <strong>SentriAlign: Training-Signal Integrity for LLMs</strong>
-                      <span class="muted"> (Co-PI)</span><br />
+                      <span class="muted"> (Co-PI) </span> Jan 14, 2026 – May 11, 2026 ·<br />
                       <span class="muted">
                         Funding Agency: MIRTA 8.0 Commercialization Accelerator ·<br />
-                        Duration: Jan 14, 2026 – May 11, 2026 ·
+                        
                         Amount: $25,000
                       </span>
                     </li>
