--- a/resume.html
+++ b/resume.html
@@ -179,8 +179,7 @@
                       <strong>SentriAlign: Training-Signal Integrity for LLMs</strong>
                       <span class="muted"> (Co-PI) </span> Jan 14, 2026 – May 11, 2026 ·<br />
                       <span class="muted">
-                        Funding Agency: MIRTA 8.0 Commercialization Accelerator ·<br />
-                        
+                        Funding Agency: MIRTA 8.0 Commercialization Accelerator<br />
                         Amount: $25,000
                       </span>
                     </li>
