--- a/resume.html
+++ b/resume.html
@@ -166,7 +166,7 @@
                 </div>
               </section>
               
-              <!-- Awards / Funding -->
+              <!-- Awards / Funding
               <section class="content-card" id="awards">
                 <div class="card-head">
                   <div class="icon"><i class="fa-solid fa-award"></i></div>
@@ -177,7 +177,7 @@
                   <ul class="mb-0">
                     <li>
                       <strong>SentriAlign: Training-Signal Integrity for LLMs</strong>
-                      <span class="muted"> (Co-PI) </span> Jan 14, 2026 – May 11, 2026 ·<br />
+                      <span class="muted"> (Co-PI) </span> Jan 14, 2026 – May 11, 2026<br />
                       <span class="muted">
                         Funding Agency: MIRTA 8.0 Commercialization Accelerator<br />
                         Amount: $25,000
@@ -185,7 +185,40 @@
                     </li>
                   </ul>
                 </div>
+              </section> -->
+              <!-- Awards / Funding -->
+              <section class="content-card" id="awards">
+                <div class="card-head">
+                  <div class="icon"><i class="fa-solid fa-award"></i></div>
+                  <h3>Awards &amp; Funding</h3>
+                </div>
+
+                <div class="card-body">
+                  <div class="d-flex flex-column gap-3">
+                    <div>
+                      <div class="d-flex flex-column flex-md-row justify-content-between gap-2">
+                        <div>
+                          <div class="fw-bold">SentriAlign: Training-Signal Integrity for LLMs</div>
+                          <div class="muted">Role: Co-PI</div>
+                        </div>
+
+                        <div class="d-flex flex-wrap gap-2 align-items-start">
+                          <span class="badge badge-soft rounded-pill">
+                            <i class="fa-solid fa-building-columns me-1"></i>MIRTA 8.0 Commercialization Accelerator
+                          </span>
+                          <span class="badge badge-soft rounded-pill">
+                            <i class="fa-solid fa-calendar-days me-1"></i>Jan 14, 2026 – May 11, 2026
+                          </span>
+                          <span class="badge badge-soft rounded-pill">
+                            <i class="fa-solid fa-dollar-sign me-1"></i>$25,000
+                          </span>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
               </section>
+
 
 
               <!-- Patents -->
