--- a/resume.html
+++ b/resume.html
@@ -132,7 +132,7 @@
                   <ul>
                     <li><strong>University of Maine (UMaine), Orono, ME, USA</strong> — Ph.D. in Electrical and Computer Engineering (Pursuing) <span class="badge badge-soft rounded-pill ms-2">Aug 2022 – Present</span></li>
                     <li><strong>Aligarh Muslim University (AMU), Aligarh, UP, India</strong> — M.Tech. in Computer Engineering (GPA 9.33/10.0, Hons.) <span class="badge badge-soft rounded-pill ms-2">Aug 2011 – Jul 2013</span></li>
-                    <li><strong>UP Technical University (now AKTU), Noida, UP, India</strong> — B.Tech. in Computer Science and Engineering (76.2%, Hons.) <span class="badge badge-soft rounded-pill ms-2">Aug 2007 – Jul 2011</span></li>
+                    <!-- <li><strong>UP Technical University (now AKTU), Noida, UP, India</strong> — B.Tech. in Computer Science and Engineering (76.2%, Hons.) <span class="badge badge-soft rounded-pill ms-2">Aug 2007 – Jul 2011</span></li> -->
                   </ul>
                 </div>
               </section>
