--- a/resume.html
+++ b/resume.html
@@ -166,26 +166,6 @@
                 </div>
               </section>
               
-              <!-- Awards / Funding
-              <section class="content-card" id="awards">
-                <div class="card-head">
-                  <div class="icon"><i class="fa-solid fa-award"></i></div>
-                  <h3>Awards &amp; Funding</h3>
-                </div>
-
-                <div class="card-body tight">
-                  <ul class="mb-0">
-                    <li>
-                      <strong>SentriAlign: Training-Signal Integrity for LLMs</strong>
-                      <span class="muted"> (Co-PI) </span> Jan 14, 2026 – May 11, 2026<br />
-                      <span class="muted">
-                        Funding Agency: MIRTA 8.0 Commercialization Accelerator<br />
-                        Amount: $25,000
-                      </span>
-                    </li>
-                  </ul>
-                </div>
-              </section> -->
               <!-- Awards / Funding -->
               <section class="content-card" id="awards">
                 <div class="card-head">
@@ -386,7 +366,7 @@
                   <hr class="my-3" style="border-color: rgba(15,23,42,.10);" />
                   <div class="d-flex flex-column flex-md-row justify-content-between gap-2 muted">
                     <div><strong>Date:</strong> December 15, 2025</div>
-                    <div><strong>Place:</strong> Orono, ME, USA</div>
+                    <!-- <div><strong>Place:</strong> Orono, ME, USA</div> -->
                   </div>
                 </div>
               </section>
