--- a/resume.html
+++ b/resume.html
@@ -187,10 +187,10 @@
                             <i class="fa-solid fa-building-columns me-1"></i>MIRTA 8.0 Commercialization Accelerator
                           </span>
                           <span class="badge badge-soft rounded-pill">
-                            <i class="fa-solid fa-calendar-days me-1"></i>Jan 14, 2026 – May 11, 2026
+                            <i class="fa-solid fa-calendar-days me-1"></i>Jan 14 – May 11, 2026
                           </span>
                           <span class="badge badge-soft rounded-pill">
-                            <i class="fa-solid fa-dollar-sign me-1"></i>$25,000
+                            <i class="fa-solid fa-dollar-sign me-1"></i>25,000
                           </span>
                         </div>
                       </div>
