--- a/resume.html
+++ b/resume.html
@@ -179,7 +179,7 @@
                       <div class="d-flex flex-column flex-md-row justify-content-between gap-2">
                         <div>
                           <div class="fw-bold">SentriAlign: Training-Signal Integrity for LLMs</div>
-                          <div class="muted">Role: Co-PI</div>
+                          <div class="muted">Role: Co-Investigator</div>
                         </div>
 
                         <div class="d-flex flex-wrap gap-2 align-items-start">
