--- a/photography.html
+++ b/photography.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Zafaryab Haider | Photography</title>
-  <meta name="description" content="Photography portfolio of Zafaryab Haider — landscapes, street, and moments." />
+  <meta name="description" content="Photography portfolio of Zafaryab Haider — landscapes, birds, and moments." />
 
   <link rel="preconnect" href="https://cdn.jsdelivr.net" />
   <link rel="preconnect" href="https://cdnjs.cloudflare.com" />
@@ -20,7 +20,7 @@
 <body class="page-photography">
   <!-- Navbar -->
   <nav class="navbar navbar-expand-xl navbar-dark sticky-top">
-    <div class="container">
+    <div class="container-xl">
       <a class="navbar-brand fw-semibold" href="index.html">Zafaryab Haider</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -37,8 +37,9 @@
   </nav>
 
   <main>
+    <!-- Hero -->
     <section class="page-hero">
-      <div class="container">
+      <div class="container-xl">
         <div class="hero-card">
           <div class="hero-inner">
             <div class="d-flex flex-column flex-md-row align-items-start align-items-md-center justify-content-between gap-3">
@@ -48,7 +49,7 @@
                   <span>Photography Portfolio</span>
                 </div>
                 <h1 class="display-6 display-title mb-2">My Photography</h1>
-                <p class="hero-muted mb-0">A curated selection of moments, landscapes, and street frames.</p>
+                <p class="hero-muted mb-0">Collections + categories to browse quickly. Click any photo to view full size.</p>
               </div>
 
               <a class="social-pill" href="https://instagram.com/zhaider_lens" target="_blank" rel="noopener noreferrer">
@@ -62,54 +63,45 @@
       </div>
     </section>
 
-    <section class="section">
-      <div class="container">
-        <div class="row g-3 g-lg-4">
-          <div class="col-12 col-sm-6 col-lg-4">
-            <a href="images/photo1.jpg" data-lightbox="gallery" data-title="Sunset Vibes" class="text-decoration-none">
-              <article class="gallery-card">
-                <div class="tag"><i class="fa-solid fa-sun me-1"></i> Sunset</div>
-                <div class="photo-window">
-                  <img src="images/photo1.jpg" alt="Sunset Vibes" loading="lazy" />
-                </div>
-                <div class="caption">
-                  <h3 class="h6 title">Sunset Vibes</h3>
-                  <p class="sub">Warm light, calm skies.</p>
-                </div>
-              </article>
-            </a>
-          </div>
+    <!-- Featured Collections (Option C) -->
+    <section class="section pt-0">
+      <div class="container-xl">
+        <div class="d-flex align-items-center justify-content-between flex-wrap gap-2 mb-3">
+          <h2 class="h5 fw-bold mb-0">Featured Collections</h2>
+          <button class="btn btn-sm btn-outline-dark" id="clearFiltersBtn" type="button">
+            <i class="fa-solid fa-filter-circle-xmark me-2"></i>Clear filters
+          </button>
+        </div>
 
-          <div class="col-12 col-sm-6 col-lg-4">
-            <a href="images/photo2.jpg" data-lightbox="gallery" data-title="Street Scene" class="text-decoration-none">
-              <article class="gallery-card">
-                <div class="tag"><i class="fa-solid fa-city me-1"></i> Street</div>
-                <div class="photo-window">
-                  <img src="images/photo2.jpg" alt="Street Scene" loading="lazy" />
-                </div>
-                <div class="caption">
-                  <h3 class="h6 title">Street Scene</h3>
-                  <p class="sub">Candid frames in motion.</p>
-                </div>
-              </article>
-            </a>
-          </div>
+        <div class="row g-3" id="collectionsRow">
+          <!-- JS renders collection cards here -->
+        </div>
+      </div>
+    </section>
 
-          <div class="col-12 col-sm-6 col-lg-4">
-            <a href="images/photo3.jpg" data-lightbox="gallery" data-title="Quiet Moments" class="text-decoration-none">
-              <article class="gallery-card">
-                <div class="tag"><i class="fa-solid fa-leaf me-1"></i> Nature</div>
-                <div class="photo-window">
-                  <img src="images/photo3.jpg" alt="Quiet Moments" loading="lazy" />
-                </div>
-                <div class="caption">
-                  <h3 class="h6 title">Quiet Moments</h3>
-                  <p class="sub">Stillness in the details.</p>
-                </div>
-              </article>
-            </a>
+    <!-- Filters -->
+    <section class="section pt-0">
+      <div class="container-xl">
+        <div class="d-flex flex-wrap gap-2 align-items-center mb-3">
+          <div class="me-2 fw-semibold text-secondary">Category:</div>
+          <div class="btn-group flex-wrap" role="group" aria-label="Category filters" id="categoryFilters">
+            <!-- JS renders category buttons here -->
           </div>
         </div>
+
+        <div class="d-flex flex-wrap gap-2 align-items-center mb-4">
+          <div class="me-2 fw-semibold text-secondary">Tags:</div>
+          <div class="d-flex flex-wrap gap-2" id="tagFilters">
+            <!-- JS renders tag pills here -->
+          </div>
+        </div>
+
+        <!-- Gallery Grid -->
+        <div class="row g-3 g-lg-4" id="galleryGrid">
+          <!-- JS renders photo cards here -->
+        </div>
+
+        <div class="text-center mt-4 text-secondary" id="galleryMeta"></div>
       </div>
     </section>
   </main>
@@ -119,7 +111,9 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/js/lightbox.min.js"></script>
+
   <script src="js/site.js"></script>
+  <script src="js/gallery.js"></script>
 
   <script>
     if (window.lightbox) {
