--- a/photography.html
+++ b/photography.html
@@ -64,7 +64,7 @@
     </section>
 
     <!-- Featured Collections (Option C) -->
-    <section class="section pt-0">
+    <!-- <section class="section pt-0">
       <div class="container-xl">
         <div class="d-flex align-items-center justify-content-between flex-wrap gap-2 mb-3">
           <h2 class="h5 fw-bold mb-0">Featured Collections</h2>
@@ -74,10 +74,24 @@
         </div>
 
         <div class="row g-3" id="collectionsRow">
-          <!-- JS renders collection cards here -->
         </div>
       </div>
+    </section> -->
+    
+    <!-- Collections (Compact) -->
+    <section class="section pt-0">
+      <div class="container-xl">
+        <div class="d-flex align-items-center justify-content-between flex-wrap gap-2 mb-2">
+          <h2 class="h6 fw-bold mb-0">Collections</h2>
+          <button class="btn btn-sm btn-outline-dark" id="clearFiltersBtn" type="button">
+            Clear
+          </button>
+        </div>
+
+        <div class="d-flex flex-wrap gap-2" id="collectionsRow"></div>
+      </div>
     </section>
+
 
     <!-- Filters -->
     <section class="section pt-0">
