--- a/photography.html
+++ b/photography.html
@@ -49,7 +49,7 @@
                   <span>Photography Portfolio</span>
                 </div>
                 <h1 class="display-6 display-title mb-2">My Photography</h1>
-                <p class="hero-muted mb-0">Collections + categories to browse quickly. Click any photo to view full size.</p>
+                <!-- <p class="hero-muted mb-0">Collections + categories to browse quickly. Click any photo to view full size.</p> -->
               </div>
 
               <a class="social-pill" href="https://instagram.com/zhaider_lens" target="_blank" rel="noopener noreferrer">
